--- a/F1WorldChampions/app/src/main/res/layout/item_cardview_worldchamp.xml
+++ b/F1WorldChampions/app/src/main/res/layout/item_cardview_worldchamp.xml
@@ -27,13 +27,14 @@
 
         <TextView
             android:id="@+id/tv_item_name"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
             android:layout_toEndOf="@id/img_item_photo"
+            android:textColor="@color/dark_red"
             android:textSize="16sp"
             android:textStyle="bold"
             tools:text="@string/drivers_name" />
@@ -42,7 +43,7 @@
             android:id="@+id/btn_favorite"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_toEndOf="@id/tv_item_name"/>
+            android:layout_toEndOf="@id/tv_item_name" />
 
         <TextView
             android:id="@+id/tv_item_detail"
@@ -54,7 +55,7 @@
             android:layout_toEndOf="@id/img_item_photo"
             android:ellipsize="end"
             android:maxLines="5"
-            tools:text="@string/detail"/>
+            tools:text="@string/detail" />
     </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
