--- a/F1WorldChampions/app/src/main/res/values/themes.xml
+++ b/F1WorldChampions/app/src/main/res/values/themes.xml
@@ -20,10 +20,11 @@
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:layout_marginEnd">8dp</item>
         <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="TextRightOfPhoto.Label">
-        <item name="android:layout_marginStart">16dp</item>
+        <item name="android:layout_marginStart">24dp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:layout_toEndOf">@id/img_photo</item>
     </style>
