--- a/F1WorldChampions/app/src/main/res/values/colors.xml
+++ b/F1WorldChampions/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="red_900">#b71c1c</color>
-    <color name="dark_red">#7f0000</color>
+    <color name="red_900">#B71C1C</color>
+    <color name="dark_red">#7F0000</color>
 </resources>
