--- a/MyListView/app/src/main/res/layout/item_hero.xml
+++ b/MyListView/app/src/main/res/layout/item_hero.xml
@@ -4,11 +4,12 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/img_photo"
-        android:layout_width="100dp"
-        android:layout_height="150dp"
-        android:scaleType="fitXY" />
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        app:civ_border_color="#FF909090"
+        app:civ_border_width="2dp" />
 
     <TextView
         android:id="@+id/txt_name"
