--- a/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
@@ -3,8 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey_900_light"
     tools:context=".ListFragment">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="230dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_users"
