Change fragment application into using navigation component

--- a/Submission/GithubUser/app/src/main/res/layout/item_user.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/item_user.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
-    android:padding="8dp"
-    android:background="@color/white">
+    android:padding="8dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_item_photo"
@@ -52,6 +51,5 @@
         app:layout_constraintStart_toEndOf="@+id/img_item_photo"
         app:layout_constraintTop_toBottomOf="@+id/tv_item_name"
         tools:text="@tools:sample/first_names" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
