--- a/Submission/GithubUser/app/src/main/res/layout/fragment_detail.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/fragment_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context=".DetailFragment">
+    tools:context=".fragment.DetailFragment">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/img_avatar"
