--- a/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListFragment">
+    android:orientation="vertical"
+    android:padding="16dp"
+    tools:context=".fragment.ListFragment">
 
-    <View
+    <SearchView
+        android:id="@+id/sv_user"
         android:layout_width="match_parent"
-        android:layout_height="230dp" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:iconifiedByDefault="false"
+        android:queryHint="@string/enter_username" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_users"
@@ -15,4 +21,4 @@
         android:layout_height="match_parent"
         tools:listitem="@layout/item_user" />
 
-</RelativeLayout>
+</LinearLayout>
