--- a/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
@@ -15,6 +15,15 @@
         android:iconifiedByDefault="false"
         android:queryHint="@string/enter_username" />
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_gravity="center"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_users"
         android:layout_width="match_parent"
