--- a/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
@@ -7,21 +7,19 @@
     android:padding="16dp"
     tools:context=".fragment.ListFragment">
 
-    <SearchView
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/sv_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:iconifiedByDefault="false"
-        android:queryHint="@string/enter_username" />
+        android:layout_marginBottom="8dp" />
 
     <ProgressBar
         android:id="@+id/progress_bar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:layout_gravity="center"
+        android:layout_marginTop="24dp"
         android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
