--- a/Submission/GithubUser/app/src/main/res/layout/activity_main.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frame_container"
     android:layout_width="match_parent"
@@ -9,10 +8,8 @@
 
     <fragment
         android:id="@+id/container"
-        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:navGraph="@navigation/main_navigation" />
+        class="com.dicoding.salsahava.githubuser.fragment.ListFragment"/>
 
 </RelativeLayout>
