--- a/Submission/GithubUser/app/src/main/res/values/themes.xml
+++ b/Submission/GithubUser/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.GithubUser" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.GithubUser" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/grey_900</item>
         <item name="colorPrimaryVariant">@color/grey_900_dark</item>
@@ -17,7 +17,8 @@
     <style name="Detail">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_gravity">center</item>
+        <item name="android:gravity">center</item>
+        <item name="fontFamily">@font/poppins_regular</item>
     </style>
 
     <style name="HorizontalDetail">
@@ -35,9 +36,8 @@
     </style>
 
     <style name="TextBelowPhoto" parent="Detail">
-        <item name="android:layout_marginTop">8dp</item>
-        <item name="android:textColor">@color/grey_900</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/grey_900_light</item>
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="Line">
