--- a/Submission/GithubUser/app/src/main/res/layout/activity_detail.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/activity_detail.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,7 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:descendantFocusability="blocksDescendants">
 
         <View
             android:id="@+id/view"
@@ -89,14 +90,14 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_location"
             tools:text="@string/dummy_company" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/tv_company">
+        <!--    <LinearLayout-->
+        <!--        android:id="@+id/linearLayout"-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="wrap_content"-->
+        <!--        android:orientation="vertical"-->
+        <!--        app:layout_constraintTop_toBottomOf="@+id/tv_company">-->
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
@@ -104,6 +105,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="?attr/colorPrimary"
+            app:layout_constraintTop_toBottomOf="@id/tv_company"
             app:tabIndicatorColor="@color/white"
             app:tabTextColor="@android:color/white" />
 
@@ -113,6 +115,8 @@
             android:layout_height="match_parent"
             app:layout_constraintTop_toBottomOf="@id/tabs" />
 
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+    <!--    </LinearLayout>-->
+
+</androidx.core.widget.NestedScrollView>
