--- a/Submission/GithubUser/app/src/main/res/layout/fragment_followers.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/fragment_followers.xml
@@ -6,6 +6,15 @@
     android:orientation="vertical"
     tools:context=".fragment.FollowersFragment">
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="24dp"
+        android:visibility="gone" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_followers"
         android:layout_width="match_parent"
