--- a/Submission/GithubUser/app/src/main/res/layout/fragment_following.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/fragment_following.xml
@@ -6,11 +6,14 @@
     android:orientation="vertical"
     tools:context=".fragment.FollowingFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/dummy_location" />
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="24dp"
+        android:visibility="gone" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_following"
