--- a/Submission/GithubUser/app/src/main/res/layout/activity_main.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,8 @@
 
     <fragment
         android:id="@+id/container"
+        class="com.dicoding.salsahava.githubuser.fragment.ListFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        class="com.dicoding.salsahava.githubuser.fragment.ListFragment"/>
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
