Added some data from submission 1

--- a/Submission/GithubUser/app/src/main/res/layout/activity_detail.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/activity_detail.xml
@@ -31,7 +31,6 @@
             android:layout_gravity="center"
             android:layout_marginTop="104dp"
             app:civ_border_color="@color/grey_900_light"
-
             app:civ_border_width="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,13 +89,93 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_location"
             tools:text="@string/dummy_company" />
 
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.05" />
+
+        <TextView
+            android:id="@+id/tv_followers"
+            style="@style/TextBelowPhoto"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toStartOf="@id/label_followers"
+            app:layout_constraintStart_toStartOf="@id/guideline_1"
+            app:layout_constraintTop_toBottomOf="@+id/tv_company"
+            tools:text="@string/dummy_numbers" />
+
+        <TextView
+            android:id="@+id/label_followers"
+            style="@style/Label"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/tab_followers"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_2"
+            app:layout_constraintStart_toEndOf="@+id/tv_followers"
+            app:layout_constraintTop_toBottomOf="@+id/tv_company" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.35" />
+
+        <TextView
+            android:id="@+id/tv_following"
+            style="@style/TextBelowPhoto"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toStartOf="@id/label_following"
+            app:layout_constraintStart_toEndOf="@+id/guideline_2"
+            app:layout_constraintTop_toBottomOf="@+id/tv_company"
+            tools:text="@string/dummy_numbers" />
+
+        <TextView
+            android:id="@+id/label_following"
+            style="@style/Label"
+            android:text="@string/tab_following"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_3"
+            app:layout_constraintStart_toEndOf="@+id/tv_following"
+            app:layout_constraintTop_toBottomOf="@+id/tv_company" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.65" />
+
+        <TextView
+            android:id="@+id/tv_repos"
+            style="@style/TextBelowPhoto"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toStartOf="@id/label_repos"
+            app:layout_constraintStart_toEndOf="@+id/guideline_3"
+            app:layout_constraintTop_toBottomOf="@+id/tv_company"
+            tools:text="@string/dummy_numbers" />
+
+        <TextView
+            android:id="@+id/label_repos"
+            style="@style/Label"
+            android:text="@string/repositories"
+            app:layout_constraintEnd_toStartOf="@+id/guideline_4"
+            app:layout_constraintStart_toEndOf="@+id/tv_repos"
+            app:layout_constraintTop_toBottomOf="@+id/tv_company" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.95" />
+
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="?attr/colorPrimary"
-            app:layout_constraintTop_toBottomOf="@id/tv_company"
+            app:layout_constraintTop_toBottomOf="@id/label_following"
             app:tabIndicatorColor="@color/white"
             app:tabTextColor="@android:color/white" />
 
