--- a/Submission/GithubUser/app/src/main/res/values/themes.xml
+++ b/Submission/GithubUser/app/src/main/res/values/themes.xml
@@ -40,6 +40,16 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="Label">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textColor">@color/grey_900_light</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+    </style>
+
     <style name="Line">
         <item name="android:layout_width">1dp</item>
         <item name="android:layout_height">match_parent</item>
