--- a/Module5-ExtendedApplication/MyWidgets/app/src/main/res/layout/random_number_widget.xml
+++ b/Module5-ExtendedApplication/MyWidgets/app/src/main/res/layout/random_number_widget.xml
@@ -5,16 +5,44 @@
     android:padding="@dimen/widget_margin"
     android:theme="@style/ThemeOverlay.MyWidgets.AppWidgetContainer">
 
-    <TextView
-        android:id="@+id/appwidget_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
-        android:background="?attr/appWidgetBackgroundColor"
-        android:contentDescription="@string/appwidget_text"
-        android:textColor="?attr/appWidgetTextColor"
-        android:textSize="24sp"
-        android:textStyle="bold|italic" />
+        android:orientation="horizontal"
+        android:padding="@dimen/widget_margin"
+        android:weightSum="9">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:padding="16dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/dicoding_logo_full" />
+
+        <TextView
+            android:id="@+id/appwidget_text"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="2dp"
+            android:layout_weight="3"
+            android:contentDescription="@string/appwidget_text"
+            android:gravity="center"
+            android:text="@string/random"
+            android:textColor="#ffffff"
+            android:textSize="15sp"
+            android:textStyle="bold|italic" />
+
+        <Button
+            android:id="@+id/btn_click"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="3"
+            android:text="@string/generate"
+            android:textColor="@android:color/white" />
+    </LinearLayout>
+
 </RelativeLayout>
