--- a/Module5-ExtendedApplication/MyWidgets/app/src/main/res/xml/random_number_widget_info.xml
+++ b/Module5-ExtendedApplication/MyWidgets/app/src/main/res/xml/random_number_widget_info.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:initialKeyguardLayout="@layout/random_number_widget"
     android:initialLayout="@layout/random_number_widget"
-    android:minWidth="40dp"
+    android:minWidth="220dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/dicoding_logo_full"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+    android:updatePeriodMillis="0"
+    android:widgetCategory="home_screen" />
