--- a/Module5-ExtendedApplication/MyMediaPlayer/app/src/main/res/layout/activity_main.xml
+++ b/Module5-ExtendedApplication/MyMediaPlayer/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:id="@+id/btn_play"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
             android:text="@string/btn_text_play" />
 
         <Button
