--- a/Submission/GithubUser/app/src/main/res/menu/main_menu.xml
+++ b/Submission/GithubUser/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/action_open_favorite"
+        android:icon="@drawable/ic_baseline_favorite_white_24"
+        android:title="Favorite Users"
+        app:showAsAction="always"/>
+
     <item
         android:id="@+id/action_change_lang_settings"
         android:icon="@drawable/ic_baseline_settings_black_24"
