Set and cancel repeating alarm done

--- a/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
+++ b/Submission/GithubUser/app/src/main/res/layout/fragment_list.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:background="@drawable/background_searchbar"
         app:queryHint="@string/enter_username" />
 
     <ProgressBar
